# manifest-amm

./: Cargo.toml
client/rust/: Cargo.toml
client/rust/src/: lib.rs
lib/: Cargo.toml
programs/manifest/: Cargo.toml
programs/manifest/src/: utils.rs
programs/manifest/src/state/: market.rs  utils.rs
programs/manifest/src/validation/: loaders.rs
sdk/: Cargo.toml
sdk/src/: constants.rs  error.rs  lib.rs  pda.rs  quantities.rs  utils.rs
sdk/src/state/: claimed_seat.rs  global.rs  market.rs  mod.rs  resting_order.rs
sdk/src/validation/: loaders.rs  manifest_checker.rs  mod.rs  solana_checkers.rs  token_checkers.rs
