[workspace]
resolver = "2"
members = [
  "lib",
  "client/rust",
  "programs/manifest",
  "programs/wrapper",
  "programs/ui-wrapper",
]

[workspace.dependencies]
shank = "0.4.2"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = [ "no-entrypoint" ] }
solana-program = "2"
borsh = "=0.10"
bytemuck = "1.7.2"
num_enum = "=0.5.11"
thiserror = "1.0.38"
solana-security-txt = "1.1.0"
static_assertions = "=1.1.0"
solana-invoke = "0.2.0"

anyhow = "1.0.66"
solana-program-test = "2"
solana-logger = "2"
solana-sdk = "2"
tokio = "1.28.0"
arrayref = "0.3.7"
solana-derivation-path = "2"
solana-zk-sdk = "2"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
strip = "debuginfo"

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
strip = "debuginfo"

# Test with release settings so CU usage is accurately measured.
[profile.test]
lto = "fat"
opt-level = 3
debug = false
codegen-units = 1
overflow-checks = true
strip = "debuginfo"


[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"