[package]
name = "hypertree"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/CKS-systems/manifest"
authors = ["Britt Cyr <britt@cks.systems>"]
description = "Data structures for Manifest"
license-file = "LICENSE"

[features]
colored = ["dep:colored"]
fuzz = []
trace = []
test = []

# Certora feature exposes many of the internal implementation details, so should
# only be used in formal verification. Ironically, the security testing makes
# the code less secure.

[dependencies]
bytemuck = { workspace = true }
solana-program = { workspace = true }
static_assertions = { workspace = true }

# Does not work with sbf. Enable when debugging red black only
colored = { version = "2.1.0", optional = true }