[package]
name = "manifest-sdk"
version = "0.1.0"
edition = "2024"

[features]
default = []
test = []

[dependencies]
hypertree = { path = "../lib" }
bytemuck.workspace = true
const-crypto = "0.3.0"
solana-pubkey = { version = "2.3", features = ["curve25519"] }
solana-program-error = "2.2"
thiserror = "2.0"
spl-token-2022-interface = "1.0"
spl-token-interface = "1.0"
solana-account-info = "2.3"
solana-sdk-ids = "2.2"

[lints]
workspace = true
